--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </main>
     
     <footer class="footer">
-        <p class="copyright"><small> 2024 DHW MALL</small></p>
+        <p class="copyright"><small> あいうえお！！！2024 DHW MALL</small></p>
     </footer>
     </div>
 </body>
